--- a/portfolio-graphic.html
+++ b/portfolio-graphic.html
@@ -727,9 +727,11 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
+                                    <div class="col-lg-12">
                                     <div class="mil-footer-bottom mil-up">
-                                        <p class="mil-text-sm">©2024. All rights reserved.</p>
-                                        <p class="mil-text-sm">Design by: <a href="https://themeforest.net/user/millerdigitaldesign/portfolio" class="mil-text-link mil-a2 mil-c-gone">Nazar Miller</a></p>
+                                        <p class="mil-text-sm">©2025. All rights reserved.</p>
+                                        <p class="mil-text-sm"><a href="https://kavishka.lk/"  class="mil-text-link mil-a2 mil-c-gone">Kavishka Ariyarathna</a></p>
+                                    </div>
                                     </div>
                                 </div>
                             </div>
