--- a/portfolio-graphic.html
+++ b/portfolio-graphic.html
@@ -103,13 +103,14 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="mil-work-card mil-mb30">
+                                        
                                         <div class="mil-cover mil-port mil-up">
                                             <div class="mil-hover-frame">
-                                                <img src="img/works/5/1.jpg" alt="cover" class="mil-scale-img" data-value-1="1.15" data-value-2="1">
+                                                <img src="img/works/5/1-s.jpg" alt="cover" class="mil-scale-img" data-value-1="1.15" data-value-2="1">
                                             </div>
                                         </div>
                                         <div class="mil-hover-overlay">
-                                            <a href="project-5-frl.html" class="mil-descr">
+                                            <a href="ID Card - Mahameruwa Rallycross.html" target="_blank" class="mil-descr">
                                                 <div class="mil-text-frame">
                                                     <h4 class="mil-head4 mil-max-1row-text mil-m4 mil-c-gone">ID Card - Mahameruwa Rallycross</h4>
                                                 </div>
